data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1067.wast
;; 8. **Test Description:** Insert an `unreachable` instruction within a `try` block followed by a `catch` block that handles the trap.    **Constraint:** The trap from `unreachable` should be caught and handled by the `catch` block.    **Relation to Unreachable Code Execution:** Ensures the correct propagation and catching of traps caused by `unreachable`.

(assert_invalid
  (module (func $try-unreachable-trap-catch (result i32)
    try (result i32)
      unreachable
    catch
      (i32.const 0)
    end
  ))
  "try block with unreachable should trap"
)